syntax = "proto3";

option csharp_namespace = "CryptoServices";

package CryptoServices;

enum StatusCode {
  ACCEPTED = 0;
  NOT_ACCEPTED = 1;
  WRONG_LOGIN = 2;
}